# sentinel

./: pyproject.toml
.github/workflows/: ci.yml
docs/: ROADMAP_UPDATES.md  sentinel_development_plan.txt
notebooks/: sentinel_registry.db  sr11_7_test.html  test_metrics.ipynb  test_report.html  validator_test.html
sentinel/: __init__.py  validator.py
sentinel/core/challenger/: comparison.py
sentinel/core/fairness/: disparate_impact.py  intersectional.py  proxy_detection.py
sentinel/core/metrics/: calibration.py  classification.py  corrections.py  drift.py  regression.py  stability.py  stress.py
sentinel/core/registry/: audit_trail.py  model_registry.py  risk_tiering.py
sentinel/core/reporting/: executive_summary.py  html_report.py  model_card.py  sr11_7.py
sentinel/core/sensitivity/: perturbation.py  shap_analysis.py
sentinel/core/uncertainty/: boostrap.py  bootstrap.py
sentinel/templates/: executive_summary.html  model_card.html  sr11_7_report.html  validation_report.html
tests/unit/: test_calibration.py  test_classification.py  test_regression.py
