[build-system]                                                                      
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["sentinel"]
[project]
name = "sentinel-mval"
version = "0.1.0"
description = "Production-ready model risk management: SR 11-7 validation, fairness analysis,and automated regulatory reporting"
authors = [{name = "Seth Gannon", email = "dalton.s.gannon@gmail.com"}]
requires-python = ">=3.11"
dependencies = ["numpy>=1.24","scipy>=1.11","pandas>=2.0","scikit-learn>=1.3","shap>=0.44","matplotlib>=3.7"]